@@ -1,5 +1,13 @@
 2008-06-02  Carlos Garnacho  <carlos@imendio.com>
 
+	* src/libtracker-utils/tracker-file-utils.[ch] (tracker_dir_remove):
+	Renamed to tracker_path_remove(). Use g_remove() instead of g_rmdir(),
+	so it can be used too on files.
+	* src/tracker-indexer/tracker-indexer.c:
+	* src/trackerd/tracker-main.c: Replace all occurrences.
+
+2008-06-02  Carlos Garnacho  <carlos@imendio.com>
+
 	* src/tracker-indexer/tracker-indexer-db.c (load_sql_file): Moved from
 	trackerd, executes the queries contained in a text file.
 	(tracker_indexer_db_get_file_metadata): Load sql files necessary to
